--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,30 @@
 /*  your css code here. If applicable */
+.header{
+	display:flex;
+	align-items:center;
+	justify-content:space-around;
+	padding:10px;
+	background-color:#011e29;
+	color:white;
+}
+body{
+	background-color:#f5f5f5;
+	
+	
+}
+.latest-news-section,.main-article,.pictorial-news-section{
+	width:30vw;
+	padding:10px 10px 10px 10px;
+	background-color:white;
+	border-radius:10px;
+	margin:10px;
+}
+li{
+	padding-left:10px;
+}
+.news{
+	display:flex;
+	flex-direction:row;
+	justify-content:space-between;
+	
+}
