--- a/styles.css
+++ b/styles.css
@@ -12,13 +12,20 @@ body{
 	
 	
 }
-.latest-news-section,.main-article,.pictorial-news-section{
+.latest-news-section,.main-article{
 	width:30vw;
 	padding:10px 10px 10px 10px;
 	background-color:white;
 	border-radius:10px;
 	margin:10px;
 }
+.pictorial-news-section{text-align:center;
+						  width:30vw;
+	padding:10px 10px 10px 10px;
+	background-color:white;
+	border-radius:10px;
+	margin:10px;
+					   }
 li{
 	padding-left:10px;
 }
