--- a/styles.css
+++ b/styles.css
@@ -18,6 +18,7 @@ body{
 	background-color:white;
 	border-radius:10px;
 	margin:10px;
+	text-align:center;
 }
 .pictorial-news-section{text-align:center;
 						  width:30vw;
